--- a/package.json
+++ b/package.json
@@ -58,14 +58,14 @@
     "bootstrap": "4.0.0-beta",
     "bundle-loader": "0.5.5",
     "classnames": "2.2.5",
-    "cookies-js": "^1.2.3",
     "cookie-parser": "1.4.3",
+    "cookies-js": "^1.2.3",
     "core-js": "2.4.1",
     "express": "4.15.2",
     "express-graphql": "0.6.4",
     "express-jwt": "5.3.0",
     "fastclick": "1.0.6",
-    "font-awesome": "4.7.0",
+    "font-awesome": "^4.7.0",
     "glyphicons-halflings": "https://github.com/inway/glyphicons-halflings.git#df545d9e4bdae9b5ffa112fcb70b3f8350929875",
     "graphql": "0.9.3",
     "graphql-relay": "0.5.1",
@@ -85,15 +85,15 @@
     "rc-hammerjs": "0.6.8",
     "react": "15.5.4",
     "react-addons-css-transition-group": "15.5.2",
+    "react-cookie": "1.0.5",
     "react-datepicker": "^0.46.0",
+    "react-dom": "15.5.4",
     "react-markdown": "^2.5.0",
     "react-modal": "^1.7.7",
-    "react-rte": "^0.11.0",
-    "react-cookie": "1.0.5",
-    "react-dom": "15.5.4",
     "react-redux": "5.0.4",
     "react-router": "4.0.0",
     "react-router-dom": "4.0.0",
+    "react-rte": "^0.11.0",
     "react-transition-group": "1.1.3",
     "reactstrap": "4.7.0",
     "redux": "3.6.0",
