--- a/package.json
+++ b/package.json
@@ -4,22 +4,39 @@
   "private": true,
   "homepage": "/app/",
   "devDependencies": {
-    "autoprefixer": "6.5.1",
-    "babel-core": "6.17.0",
-    "babel-eslint": "^6.1.2",
+    "assets-webpack-plugin": "3.5.1",
+    "autoprefixer": "6.7.7",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.24.1",
+    "babel-eslint": "7.2.3",
     "babel-jest": "17.0.2",
-    "babel-loader": "6.2.7",
+    "babel-loader": "7.0.0",
+    "babel-plugin-rewire": "1.1.0",
+    "babel-preset-env": "1.4.0",
+    "babel-preset-react": "6.24.1",
     "babel-preset-react-app": "^2.0.1",
+    "babel-preset-react-optimize": "1.0.1",
+    "babel-preset-stage-2": "6.24.1",
+    "babel-register": "6.24.1",
+    "babel-template": "6.24.1",
+    "babel-types": "6.24.1",
+    "browser-sync": "2.18.8",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
+    "chai": "3.5.0",
     "chalk": "1.1.3",
+    "chokidar": "1.6.1",
     "connect-history-api-fallback": "1.3.0",
     "cross-spawn": "4.0.2",
     "css-loader": "0.26.0",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
+    "editorconfig-tools": "0.1.1",
+    "enzyme": "2.8.2",
     "eslint": "^3.5.0",
+    "eslint-config-airbnb": "14.1.0",
     "eslint-config-react-app": "^0.2.1",
     "eslint-loader": "1.6.0",
+    "eslint-plugin-css-modules": "2.7.1",
     "eslint-plugin-flowtype": "^2.18.1",
     "eslint-plugin-import": "^1.12.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
@@ -27,27 +44,68 @@
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "filesize": "3.3.0",
+    "front-matter": "2.1.2",
     "fs-extra": "0.30.0",
+    "glob": "7.1.1",
     "gzip-size": "3.0.0",
     "html-webpack-plugin": "2.24.0",
     "http-proxy-middleware": "0.17.2",
     "jest": "^19.0.2",
+    "jquery": "3.2.1",
     "json-loader": "0.5.4",
+    "lint-staged": "3.4.0",
+    "markdown-it": "8.3.1",
+    "mkdirp": "0.5.1",
+    "mocha": "3.3.0",
     "node-sass": "^4.5.2",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
+    "pixrem": "3.0.2",
+    "pleeease-filters": "3.0.1",
+    "popper.js": "1.12.4",
+    "postcss": "5.2.17",
+    "postcss-calc": "5.3.1",
+    "postcss-color-function": "3.0.0",
+    "postcss-custom-media": "5.0.1",
+    "postcss-custom-properties": "5.0.2",
+    "postcss-custom-selectors": "3.0.0",
+    "postcss-flexbugs-fixes": "2.1.1",
+    "postcss-global-import": "1.0.0",
+    "postcss-import": "9.1.0",
     "postcss-loader": "1.0.0",
+    "postcss-media-minmax": "2.1.2",
+    "postcss-nested": "1.0.1",
+    "postcss-nesting": "2.3.1",
+    "postcss-pseudoelements": "4.0.0",
+    "postcss-selector-matches": "2.0.5",
+    "postcss-selector-not": "2.0.0",
+    "pre-commit": "1.2.2",
     "promise": "7.1.1",
+    "raw-loader": "0.5.1",
+    "react-addons-test-utils": "15.5.1",
+    "react-deep-force-update": "2.0.1",
     "react-dev-utils": "^0.4.2",
+    "react-hot-loader": "3.0.0-beta.6",
     "recursive-readdir": "2.1.0",
+    "redbox-react": "1.3.6",
+    "redux-mock-store": "1.2.3",
+    "rimraf": "2.6.1",
     "sass-loader": "^6.0.3",
+    "sinon": "2.1.0",
     "strip-ansi": "3.0.1",
     "style-loader": "0.13.1",
+    "stylefmt": "5.3.2",
+    "stylelint": "7.10.1",
+    "stylelint-config-standard": "16.0.0",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
+    "webpack-bundle-analyzer": "2.4.0",
+    "webpack-dev-middleware": "1.10.2",
     "webpack-dev-server": "1.16.2",
+    "webpack-hot-middleware": "2.18.0",
     "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "2.0.3",
+    "write-file-webpack-plugin": "4.0.2"
   },
   "dependencies": {
     "animate.css": "3.5.2",
@@ -80,7 +138,7 @@
     "passport": "0.3.2",
     "passport-facebook": "2.1.1",
     "pretty-error": "2.1.0",
-    "prop-types": "15.5.8",
+    "prop-types": "^15.6.0",
     "query-string": "4.3.4",
     "rc-hammerjs": "0.6.8",
     "react": "15.5.4",
@@ -91,9 +149,8 @@
     "react-markdown": "^2.5.0",
     "react-modal": "^1.7.7",
     "react-redux": "5.0.4",
-    "react-router": "4.0.0",
+    "react-router": "3.0.2",
     "react-router-dom": "4.0.0",
-    "react-rte": "^0.11.0",
     "react-transition-group": "1.1.3",
     "reactstrap": "4.7.0",
     "redux": "3.6.0",
