--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "deploy": "s3cmd put -r build/ s3://1tap.ontappipeline.com/",
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
