--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "react-dom": "15.5.4",
     "react-markdown": "^2.5.0",
     "react-modal": "^1.7.7",
+    "react-moment": "^0.6.8",
     "react-redux": "5.0.4",
     "react-router": "3.0.2",
     "react-router-dom": "4.0.0",
