--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "react-redux": "5.0.4",
     "react-router": "3.0.2",
     "react-router-dom": "4.0.0",
+    "react-simple-charts": "^0.0.19",
     "react-transition-group": "1.1.3",
     "reactstrap": "4.7.0",
     "redux": "3.6.0",
