--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "immutable": "^3.8.1",
     "imports-loader": "0.7.1",
     "isomorphic-style-loader": "2.0.0",
+    "jinq": "^1.6.1",
     "jsonwebtoken": "7.3.0",
     "node-fetch": "1.6.3",
     "normalize.css": "6.0.0",
